02/19/2006  Ian Lewis   <IanLewis@member.fsf.org>

    * Fixed bug 143401802. BufferHistory now builds a dom and writes it out
      using DOMSerializer which ensures that the document will be well-formed
      and that special characters will be written out properly.

02/17/2006  Ian Lewis   <IanLewis@member.fsf.org>

    * Fixed a bug where indeces weren't being kept properly when serializing a
      document that was larger than the write buffer size.

02/16/2006  Ian Lewis   <IanLewis@member.fsf.org>

    * Fixed a bug in AdapterNode that allowed you to remove the root document
      element node.
    * Added a copy method to AdapterNode to facilitate copying nodes during
      document editing.

02/10/2006  Ian Lewis   <IanLewis@member.fsf.org>

    * Made a fix to XMLDocument to allow it to parse documents that
      have multi-byte characters. The current implementation of the
      ContentManagerInputStream is inadequate to deal with multi-byte
      characters. The solution is to extract the document as a string and
      parse it using a StringReader. This is a bit inefficient as the whole
      document has to be copied into a String object but it will probably be
      adequate for at least the immediate future since jsXe doesn't deal
      _really_ well with large files anyway.

02/09/2006  Ian Lewis   <IanLewis@member.fsf.org>

    * Disabled removing document type nodes
    * Whenever requesting validation errors from an XMLDocument the document
      will now check the validity of the document regardless of whether the
      document itself has been changed because the DTD or Schema it is
      validated againtst may have changed (e.g. in another open tab in jsXe).

02/03/2006  Ian Lewis   <IanLewis@member.fsf.org>

    * Added support for detecting a file's line separator and preserving it for
      later during write.

02/02/2006  Ian Lewis   <IanLewis@member.fsf.org>

    * jsXe now allows plugins to specify their own localized messages. These